# simplestac

./: .gitattributes  .gitignore  .gitlab-ci.yml  .zenodo.json  CHANGELOG.md  README.md  environment-dev.yml  environment-doc.yml  environment-notebook.yml  environment-notebooks.yml  environment.yml  pyproject.toml  pyproject_doc.toml
docs/css/: code_select.css  code_select.js  style.css
docs/templates/pdocs/: text.mako
examples/: README.md  download_data.py  extended_item_collection.py  local_stac.py  remote_stac.py  test_snakeviz.py
simplestac/: __init__.py  extents.py  local.py  utils.py
simplestac/formats/: S2_L2A_THEIA.json  common_name_table.csv
tests/: conftest.py  download_data.py  extents.py  test_extents.py  test_local.py  test_remote.py
