[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[project]
name = "simplestac"
dynamic = ["version"]
authors = [
  {name="Florian de Boissieu", email="florian.deboissieu@inrae.fr"},
  {name="Remi Cresson", email="remi.cresson@inrae.fr"},
]
description = "STAC tools to simplify STAC use"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "GPLv3"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
  "tqdm",
  "path",
  "pystac",
  "rioxarray",
  "stac_static@git+https://github.com/jsignell/stac-static",
  "stackstac",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
]
notebook=[
  "ipykernels",
  "planetary-computer",
  "xpystac",
]


[project.urls]
Homepage = "https://forgemia.inra.fr/umr-tetis/stac/simplestac"
Repository = "https://forgemia.inra.fr/umr-tetis/stac/simplestac"
Issues = "https://forgemia.inra.fr/umr-tetis/stac/simplestac/-/issues"

[tool.setuptools.packages.find]
include = [
    "simplestac",
]
